clusters/sno/applications/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  labels:
    app: homeassistant
spec:
  type: ClusterIP
  ports:
    - port: 8123
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: homeassistant
