clusters/sno/applications/homeassistant/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: homeassistant
spec:
  host: homeassistant.apps.majora.home.lab
  port:
    targetPort: http
  to:
    kind: Service
    name: homeassistant
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
