clusters/sno/applications/homeassistant/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-tailscale
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: homeassistant
      port:
        number: 8123
